--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
-adafsdhj
+
 <body>
     <div class="background">
+        <div class="wrapper">
+
+        
+            <div class="header">
+                <div class="logo">
+                    <a href="#"><img src="./assets/img/logo.svg" alt="logo"></a>
+                    <a href="#"><img src="./assets/img/menu_hover.svg" alt="meniu"></a>
+                </div>
+            </div>
+        </div>
 
     </div>
 </body>
